--- a/app/thinking/design-systems-dont-fail-because-of-bad-components/visuals.module.css
+++ b/app/thinking/design-systems-dont-fail-because-of-bad-components/visuals.module.css
@@ -57,7 +57,7 @@
 }
 
 .compareHeadingDark {
-  color: rgba(255, 255, 255, 0.4);
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .compareItem {
@@ -116,5 +116,5 @@
 }
 
 .compareItemSubDark {
-  color: rgba(255, 255, 255, 0.4);
+  color: rgba(255, 255, 255, 0.72);
 }
