--- a/app/thinking/the-real-threat-isnt-replacement/visuals.module.css
+++ b/app/thinking/the-real-threat-isnt-replacement/visuals.module.css
@@ -142,7 +142,7 @@
 }
 
 .divideColHeadingDark {
-  color: rgba(255, 255, 255, 0.4);
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .divideItem {
